[tool.poetry]
name = "overbearing-tui"
version = "0.1.0"
description = ""
authors = ["OverbearingPearl <OverbearingPearl@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[[tool.poetry.source]]
name = "tsinghua"
url = "http://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
