[tool.poetry]
name = "overbearing-tui"
version = "0.1.0"
description = ""
authors = ["OverbearingPearl <OverbearingPearl@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[[tool.poetry.source]]
name = "tsinghua"
url = "http://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
